# classroom_attention

./: .gitignore  README.md  behavior.py  ca.py  ca_gpu.py  chat_detector.py  config.py  config.yaml  eye_detector.py  main.py  pyproject.toml  reporter.py  requirements.txt  utils.py  visualizer.py  web_server.py
docs/superpowers/plans/: 2026-06-20-classroom-attention-refactor.md
templates/: index.html
tests/: test_behavior.py  test_chat_detector.py  test_config.py  test_eye_detector.py  test_reporter.py  test_utils.py  test_visualizer.py
