[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom-attention"
version = "1.0.0"
description = "Real-time classroom attention detection using pose estimation and behavior analysis"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "mzniu"}
]
keywords = ["classroom", "attention", "pose-estimation", "education", "yolo", "mediapipe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "ultralytics>=8.0",
    "mediapipe>=0.10.35",
    "deep-sort-realtime>=1.3",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
classroom-attention = "main:main"

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["config.yaml", "*.task"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
